# Magic

./: Caster.py  Location.py  Spell.py  SpellEffect.py  TheWorld.py  docker-compose.yml
James_code/: Elements.py  People.py  Props.py  Spell.py  SpellDecoder.py  SpellEffect.py  SpellShapes.py  Targeting.py  TheWorld.py  Tile.py  World.py  test.py
MagicSystem/: Element.py  Location.py  Spell.py  TheWorld.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/engine/: Elements.py  SpellShapes.py  TheWorld.py  Tile.py  test.py
backend/app/graphql/: __init__.py  world.py  worlds.py
backend/app/migrations/: 0001_world.py
backend/app/models/: __init__.py  props.py  spell.py  targeting.py  tile.py  world.py
backend/app/tests/: __init__.py
backend/fixtures/: auth.json
backend/magic/: effects.py  elements.py  props.py  settings.py  shapes.py  spell.py  tile.py  urls.py  world.py
backend/project/: settings.py  urls.py  wsgi.py
backend/util/: enums.py
backend/util/custom_types/: __init__.py  graphene.py  graphene_django.py
frontend/: .babelrc  Dockerfile  apollo.config.js  package-lock.json  package.json  readme.md  tsconfig.json  tslint.json  webpack.config.js
frontend/src/: app.tsx  global.d.ts  index.ejs  index.scss  index.tsx
frontend/src/apollo/: client.ts
frontend/src/components/: dark-mode-switch.tsx  dark-mode.tsx  error-boundary.tsx  error-view.tsx  nav-button.tsx  (+2 more)
nginx/: Dockerfile
nginx/config/: nginx.conf
old_code/: Caster.py  Location.py  README.md  Spell.py  SpellEffect.py  SpellShapes.py
postgres/: Dockerfile
(+3 files in other folders)
