[tool.poetry]
name = "magic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
inflection = "^0.3.1"
networkx = "^2.3"
django = "^2.2"
graphene-django = "^2.5"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
